# nse_index_data

./: LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: release.yml
src/nse_data_leomajor/: core.py  daySummary.py  equity.py  index.py
